[package]
name = "algorithmic-art"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="julia-set"
path="src/julia_set.rs"

[[bin]]
name="julia-sets-rotating"
path="src/julia_sets_rotating.rs"

[[bin]]
name="print-color-map"
path="src/print_color_map.rs"

[dependencies]
image = "^0.24.2"
num-complex = "^0.4.1"
rayon = "^1.5.3"
cgmath = "^0.18.0"
