[package]
name = "mgart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "^0.24.2"
num-complex = "0.4.1"
rayon = "^1.5.3"
clap = { version = "^3.1.18", features = ["derive"] }
serde = { version = "^1.0.137", features = ["derive"] }
serde_json = "^1.0.81"
display_json = "^0.2.0"
rand = "^0.8.5"
rand_distr = "^0.4.3"
map-macro = "^0.2.2"
