[package]
name = "mgart"
version = "0.0.1"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Machine Generated Art. CLI app for generating algorithmic art"
keywords = ["cli", "terminal", "graphics", "image", "cgi"]
repository = "https://github.com/jofas/mgart"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "^0.24.2"
rayon = "^1.5.3"
clap = { version = "^3.1.18", features = ["derive"] }
serde = { version = "^1.0.137", features = ["derive"] }
serde_json = "^1.0.81"
jsonnet-rs = "^0.17.0"
display_json = "^0.2.0"
rand = "^0.8.5"
rand_distr = "^0.4.3"
map-macro = "^0.2.2"
anyhow = "^1.0.66"
log = "^0.4.17"
env_logger = "^0.10.0"
num = "^0.4.0"

[dev-dependencies]
criterion = "^0.4.0"

[lib]
bench = false

[[bin]]
name = "mgart"
path = "src/main.rs"
bench = false

[[bench]]
name = "post_processing"
harness = false

[[bench]]
name = "algorithms"
harness = false

[[bench]]
name = "sampler"
harness = false
